test/syntaxerrors/TestMissingRParenIdentifier.jdc
int num = 5;

println(num;